--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "axios": "^0.27.2",
+    "highlight.js": "^11.5.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
