--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/line-clamp": "^0.4.0",
     "axios": "^0.27.2",
+    "embla-carousel-autoplay": "^6.2.0",
+    "embla-carousel-class-names": "^6.2.0",
+    "embla-carousel-react": "^6.2.0",
     "highlight.js": "^11.5.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
